5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4139/executions/1723_2508.log
== TEST (2019-05-09 22:45:13) 
-- CODE:
v = int(input("vezes de repeticao: "))

soma = 0
i = 0
fim = v -1
while(i <= v):
	soma = 3 -(((-1)**i)*(4/((2*i)*(3*i)*(4*i))))
	i = i + 1
	print(i,soma)
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    soma = 3 -(((-1)**i)*(4/((2*i)*(3*i)*(4*i))))
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 22:46:30) 
-- CODE:
v = int(input("vezes de repeticao: "))

soma = 0
i = 0
fim = v -1
while(i <= v):
	soma = 3 -(((-1)**i)*(4/((2*i)*(3*i)*(4*i))))
	i = i + 1
	print(i,soma)
print(round(soma,8)
-- ERROR:
File "XXXX", line 11
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 22:46:38) 
-- CODE:
v = int(input("vezes de repeticao: "))

soma = 0
i = 0
fim = v -1
while(i <= v):
	soma = 3 -(((-1)**i)*(4/((2*i)*(3*i)*(4*i))))
	i = i + 1
	print(i,soma)
print(round(soma,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    soma = 3 -(((-1)**i)*(4/((2*i)*(3*i)*(4*i))))
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 22:47:58) 
-- CODE:
v = int(input("vezes de repeticao: "))

soma = 0
i = 1
fim = v
while(i < fim):
	soma = 3 -(((-1)**i)*(4/((2*i)*(3*i)*(4*i))))
	i = i + 1
	print(i,soma)
print(round(soma,8))
-- OUTPUT:
2 3.1666666666666665
3 2.9791666666666665
4 3.006172839506173
5 2.9973958333333335
2.99739583
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 22:48:22) 
-- CODE:
v = int(input("vezes de repeticao: "))

soma = 0
i = 1
fim = v
while(i < fim):
	soma = 3 -(((-1)**i)*(4/((2*i)*(3*i)*(4*i))))
	i = i + 1

print(round(soma,8))
-- EXECUTION TIME:
0.214489
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
2.99739583
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.000018
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
2.99997142
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 22:48:54) 
-- CODE:
v = int(input("vezes de repeticao: "))

soma = 0
i = 1
fim = v
while(i < fim):
	soma = 3 -(((-1)**i)*(4/((2*i)*(3*i)*(4*i))))
	i = i + 1

print(round(soma,8))
-- OUTPUT:
2.99739583
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 22:49:07) 
-- CODE:
v = int(input("vezes de repeticao: "))

soma = 0
i = 1
fim = v
while(i < fim):
	soma = 3 -(((-1)**i)*(4/((2*i)*(3*i)*(4*i))))
	i = i + 1

print(round(soma,8))
-- OUTPUT:
2.99739583
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 22:49:16) 
-- CODE:
v = int(input("vezes de repeticao: "))

soma = 0
i = 1
fim = v
while(i < fim):
	soma = 3 -(((-1)**i)*(4/((2*i)*(3*i)*(4*i))))
	i = i + 1

print(round(soma,8))
-- OUTPUT:
2.99739583
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 22:54:55) 
-- CODE:
v = int(input("vezes de repeticao: "))

soma = 0
i = 1
fim = v
while(i < fim):
	soma = 3 -(((-1)**i)*(4/((i*1+1)*(2*i+1)*(3*i+1))))
	i = i + 1

print(round(soma,8))
-- OUTPUT:
2.99316239
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 22:55:12) 
-- CODE:
v = int(input("vezes de repeticao: "))

soma = 0
i = 1
fim = v
while(i < fim):
	soma = 3 -(((-1)**i)*(4/((i*1+1)*(2*i+1)*(3*i+1))))
	i = i + 1

print(round(soma,8))
-- OUTPUT:
2.99316239
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 22:55:54) 
-- CODE:
v = int(input("vezes de repeticao: "))

soma = 0
i = 1
fim = v
while(i < fim):
	soma = 3 +(((-1)**i)*(4/((i*1+1)*(2*i+1)*(3*i+1))))
	i = i + 1

print(round(soma,8))
-- OUTPUT:
3.00683761
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 22:56:16) 
-- CODE:
v = int(input("vezes de repeticao: "))

soma = 0
i = 1
fim = v
while(i < fim):
	soma = 3 +(((-1)**i)*(4/((i*1+1)*(2*i+1)*(3*i+1))))
	i = i + 1

print(round(soma,8))
-- OUTPUT:
3.00683761
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 22:56:47) 
-- CODE:
v = int(input("vezes de repeticao: "))

soma = 0
i = 1
fim = v - 1
while(i < fim):
	soma = 3 -(((-1)**i)*(4/((i*1+1)*(2*i+1)*(3*i+1))))
	i = i + 1

print(round(soma,8))
-- OUTPUT:
3.01428571
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 22:57:04) 
-- CODE:
v = int(input("vezes de repeticao: "))

soma = 0
i = 1
fim = v - 1
while(i < fim):
	soma = 3 -(((-1)**i)*(4/((i*1+1)*(2*i+1)*(3*i+1))))
	i = i + 1

print(round(soma,8))
-- OUTPUT:
3.01428571
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 22:57:44) 
-- CODE:
v = int(input("vezes de repeticao: "))

soma = 0
i = 1
fim = v - 1
while(i < fim):
	soma = 3 -(((-1)**i)*(4/((i*1+1)*(2*i+1)*(3*i+1))))
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
2 3.1666666666666665
3 2.961904761904762
4 3.0142857142857142
3.01428571
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 22:58:36) 
-- CODE:
v = int(input("vezes de repeticao: "))

soma = 0
i = 1
fim = v - 1
while(i < fim):
	soma = 3 -(((-1)**i)*(4/((i*1+1)*(2*i+1)*(3*i+1))))
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
2 3.1666666666666665
3 2.961904761904762
4 3.0142857142857142
3.01428571
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 22:58:53) 
-- CODE:
v = int(input("vezes de repeticao: "))

soma = 0
i = 1
fim = v
while(i < fim):
	soma = 3 -(((-1)**i)*(4/((i*1+1)*(2*i+1)*(3*i+1))))
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
2 3.1666666666666665
3 2.961904761904762
4 3.0142857142857142
5 2.993162393162393
2.99316239
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 22:59:30) 
-- CODE:
v = int(input("vezes de repeticao: "))

soma = 0
i = 0
fim = v
while(i < fim):
	soma = 3 -(((-1)**i)*(4/((i*1+1)*(2*i+1)*(3*i+1))))
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
1 -1.0
2 3.1666666666666665
3 2.961904761904762
4 3.0142857142857142
5 2.993162393162393
2.99316239
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 23:00:15) 
-- CODE:
v = int(input("vezes de repeticao: "))

soma = 0
i = 0
fim = v -1
while(i < fim):
	soma = 3 -(((-1)**i)*(4/((i*1+1)*(2*i+1)*(3*i+1))))
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
1 -1.0
2 3.1666666666666665
3 2.961904761904762
4 3.0142857142857142
3.01428571
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 23:00:23) 
-- CODE:
v = int(input("vezes de repeticao: "))

soma = 0
i = 0
fim = v -1
while(i < fim):
	soma = 3 -(((-1)**i)*(4/((i*1+1)*(2*i+1)*(3*i+1))))
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
1 -1.0
2 3.1666666666666665
3 2.961904761904762
4 3.0142857142857142
3.01428571
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 23:01:15) 
-- CODE:
v = int(input("vezes de repeticao: "))

soma = 0
i = 0

while(i < v):
	soma = 3 -(((-1)**i)*(4/((i*1+1)*(2*i+1)*(3*i+1))))
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
1 -1.0
2 3.1666666666666665
3 2.961904761904762
4 3.0142857142857142
5 2.993162393162393
2.99316239
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 23:03:57) 
-- CODE:
v = int(input("vezes de repeticao: "))

soma = 0
i = 0

while(i < v):
	soma = 3 -(((-1)**i)*(4/((i*1+1)*(2*i+1)*(3*i+1))))
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
1 -1.0
2 3.1666666666666665
3 2.961904761904762
4 3.0142857142857142
5 2.993162393162393
2.99316239
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 23:05:30) 
-- CODE:
v = int(input("vezes de repeticao: "))

soma = 0
i = 0

while(i < v):
	soma = soma -(((-1)**i)*(4/((i*1+1)*(2*i+1)*(3*i+1))))
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
1 -4.0
2 -3.8333333333333335
3 -3.8714285714285714
4 -3.857142857142857
5 -3.863980463980464
-3.86398046
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 23:06:17) 
-- CODE:
v = int(input("vezes de repeticao: "))

soma = 0
i = 0

while(i < v):
	soma = soma + (((-1)**i)*(4/((i*1+1)*(2*i+1)*(3*i+1))))
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
1 4.0
2 3.8333333333333335
3 3.8714285714285714
4 3.857142857142857
5 3.863980463980464
3.86398046
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 23:07:35) 
-- CODE:
v = int(input("vezes de repeticao: "))

soma = 0
i = 1

while(i < v-1):
	soma = soma + (((-1)**i)*(4/((i*1+1)*(2*i+1)*(3*i+1))))
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
2 -0.16666666666666666
3 -0.12857142857142856
4 -0.14285714285714285
-0.14285714
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 23:07:58) 
-- CODE:
v = int(input("vezes de repeticao: "))

soma = 0
i = 1

while(i < v-1):
	soma = soma - (((-1)**i)*(4/((i*1+1)*(2*i+1)*(3*i+1))))
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
2 0.16666666666666666
3 0.12857142857142856
4 0.14285714285714285
0.14285714
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 23:08:32) 
-- CODE:
v = int(input("vezes de repeticao: "))

soma = 3
i = 1

while(i < v-1):
	soma = soma - (((-1)**i)*(4/((i*1+1)*(2*i+1)*(3*i+1))))
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
2 3.1666666666666665
3 3.1285714285714286
4 3.142857142857143
3.14285714
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 23:08:48) 
-- CODE:
v = int(input("vezes de repeticao: "))

soma = 3
i = 0

while(i < v-1):
	soma = soma - (((-1)**i)*(4/((i*1+1)*(2*i+1)*(3*i+1))))
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
1 -1.0
2 -0.8333333333333334
3 -0.8714285714285714
4 -0.8571428571428572
-0.85714286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 23:09:04) 
-- CODE:
v = int(input("vezes de repeticao: "))

soma = 3
i = 0

while(i < v-1):
	soma = soma - (((-1)**i)*(4/((i*1+1)*(2*i+1)*(3*i+1))))
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
1 -1.0
2 -0.8333333333333334
3 -0.8714285714285714
4 -0.8571428571428572
-0.85714286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 23:10:27) 
-- CODE:
v = int(input("vezes de repeticao: "))

soma = 3
i = 0

while(i < v-1):
	soma = soma - (4/((i*1+1)*(2*i+1)*(3*i+1)))
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
1 -1.0
2 -1.1666666666666667
3 -1.204761904761905
4 -1.2190476190476192
-1.21904762
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 23:11:15) 
-- CODE:
v = int(input("vezes de repeticao: "))

soma = 3
i = 1

while(i < v-1):
	soma = soma - (4/((i*1+1)*(2*i+1)*(3*i+1)))
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
2 2.8333333333333335
3 2.7952380952380955
4 2.7809523809523813
2.78095238
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 23:11:46) 
-- CODE:
v = int(input("vezes de repeticao: "))

soma = 3
i = 1

while(i < v-1):
	soma = soma - (4/24)
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
2 2.8333333333333335
3 2.666666666666667
4 2.5000000000000004
2.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 23:12:02) 
-- CODE:
v = int(input("vezes de repeticao: "))

soma = 3
i = 1

while(i < v-1):
	soma = soma - (4/24)
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
2 2.8333333333333335
3 2.666666666666667
4 2.5000000000000004
2.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 23:12:12) 
-- CODE:
v = int(input("vezes de repeticao: "))

soma = 3
i = 1

while(i < v-1):
	soma = soma - (4/24)
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
2 2.8333333333333335
3 2.666666666666667
4 2.5000000000000004
2.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 23:12:24) 
-- CODE:
v = int(input("vezes de repeticao: "))

soma = 3
i = 1

while(i < v-1):
	soma = soma - (4/24)
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
2 2.8333333333333335
3 2.666666666666667
4 2.5000000000000004
2.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 23:12:30) 
-- CODE:
v = int(input("vezes de repeticao: "))

soma = 3
i = 1

while(i < v):
	soma = soma - (4/24)
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
2 2.8333333333333335
3 2.666666666666667
4 2.5000000000000004
5 2.333333333333334
2.33333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 23:13:15) 
-- CODE:
v = int(input("vezes de repeticao: "))

soma = 3
i = 0

while(i < v):
	soma = soma - (4/24)
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
1 2.8333333333333335
2 2.666666666666667
3 2.5000000000000004
4 2.333333333333334
5 2.1666666666666674
2.16666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 23:14:18) 
-- CODE:
v = int(input("vezes de repeticao: "))

soma = 3
i = 0

while(i < v):
	soma = soma + (4/24)
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
1 3.1666666666666665
2 3.333333333333333
3 3.4999999999999996
4 3.666666666666666
5 3.8333333333333326
3.83333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 23:16:10) 
-- CODE:
v = int(input("vezes de repeticao: "))

soma = 3
i = 0

while(i < v):
	soma = soma + (4/(2*3*4))
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
1 3.1666666666666665
2 3.333333333333333
3 3.4999999999999996
4 3.666666666666666
5 3.8333333333333326
3.83333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 23:23:53) 
-- CODE:
v = int(input("vezes de repeticao: "))

soma = 3
i = 0
fim = v - 1
while(i < fim):
	soma = soma - ((4/((i*1)+1)*((2*i)+1)*((i*2)+1))*(-1)**i)
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
1 -1.0
2 17.0
3 -16.33333333333333
4 32.66666666666667
32.66666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 23:24:38) 
-- CODE:
v = int(input("vezes de repeticao: "))

soma = 3
i = 0
fim = v - 1
while(i < fim):
	soma = soma - (((4/((i*1)+1)*((2*i)+1)*((i*2)+1)))*(-1)**i)
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
1 -1.0
2 17.0
3 -16.33333333333333
4 32.66666666666667
32.66666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 23:26:19) 
-- CODE:
v = int(input("vezes de repeticao: "))

soma = 3
i = 0
fim = v - 1
while(i < fim):
	soma = soma - ((4/((i*1)+1)*((2*i)+1)*((i*2)+1))*(-1)**i)
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
1 -1.0
2 17.0
3 -16.33333333333333
4 32.66666666666667
32.66666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 23:29:40) 
-- CODE:
v = int(input("vezes de repeticao: "))

soma = 3
i = 0
fim = v - 1
while(i < fim):
	soma = soma - ((4/((i*1)+1)*((2*i)+1)*((i*i)+2))*(-1)**i)
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
1 -5.0
2 13.0
3 -27.0
4 50.0
50.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 23:30:05) 
-- CODE:
v = int(input("vezes de repeticao: "))

soma = 0
i = 0
fim = v - 1
while(i < fim):
	soma = soma - ((4/((i*1)+1)*((2*i)+1)*((i*i)+2))*(-1)**i)
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
1 -8.0
2 10.0
3 -30.0
4 47.0
47.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 23:31:27) 
-- CODE:
v = int(input("vezes de repeticao: "))

soma = 0
i = 0
fim = v - 1
while(i < fim):
	soma = soma - ((4/(((i*1)+1)*((2*i)+1)*((i*i)+2)))*(-1)**i)
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
1 -2.0
2 -1.7777777777777777
3 -1.8222222222222222
4 -1.8092352092352093
-1.80923521
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 23:31:44) 
-- CODE:
v = int(input("vezes de repeticao: "))

soma = 3
i = 0
fim = v - 1
while(i < fim):
	soma = soma - ((4/(((i*1)+1)*((2*i)+1)*((i*i)+2)))*(-1)**i)
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
1 1.0
2 1.2222222222222223
3 1.1777777777777778
4 1.1907647907647907
1.19076479
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 23:32:34) 
-- CODE:
v = int(input("vezes de repeticao: "))

soma =5
i = 0
fim = v - 1
while(i < fim):
	soma = soma - ((4/(((i*1)+1)*((2*i)+1)*((i*i)+2)))*(-1)**i)
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
1 3.0
2 3.2222222222222223
3 3.177777777777778
4 3.190764790764791
3.19076479
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 23:41:56) 
-- CODE:
v = int(input("vezes de repeticao: "))

soma =0
i = 0
fim = v - 1
while(i < fim):
	soma = soma - ((4/((i*1+2)*(2*i+1)*(i*1+2)))*(-1)**i)
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
1 -1.0
2 -0.8518518518518519
3 -0.9018518518518519
4 -0.878994708994709
-0.87899471
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 23:42:15) 
-- CODE:
v = int(input("vezes de repeticao: "))

soma =3
i = 0
fim = v - 1
while(i < fim):
	soma = soma - ((4/((i*1+2)*(2*i+1)*(i*1+2)))*(-1)**i)
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
1 2.0
2 2.148148148148148
3 2.098148148148148
4 2.121005291005291
2.12100529
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 23:45:11) 
-- CODE:
v = int(input("vezes de repeticao: "))

soma =3
i = 0
fim = v - 1
while(i < fim):
	soma = soma - ((4/((i*1+1)*(2*i+1)*(i*2+2)))*(-1)**i)
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
1 1.0
2 1.1666666666666667
3 1.1222222222222222
4 1.140079365079365
1.14007937
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 23:45:38) 
-- CODE:
v = int(input("vezes de repeticao: "))

soma =3
i = 1
fim = v
while(i < fim):
	soma = soma - ((4/((i*1+1)*(2*i+1)*(i*2+2)))*(-1)**i)
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
2 3.1666666666666665
3 3.1222222222222222
4 3.140079365079365
5 3.131190476190476
3.13119048
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 23:46:34) 
-- CODE:
v = int(input("vezes de repeticao: "))

soma =3
i = 1
fim = v
while(i < fim):
	soma = soma - ((4/(((i*1)+1)*((2*i)+1)*((i*2)+2)))*(-1)**i)
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
2 3.1666666666666665
3 3.1222222222222222
4 3.140079365079365
5 3.131190476190476
3.13119048
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 23:48:28) 
-- CODE:
v = int(input("vezes de repeticao: "))

soma =1
i = 1
fim = v
while(i < fim):
	soma = soma - ((4/(((i*1)+1)*((2*i)+1)*((i*2)+2)))*(-1)**i)
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
2 1.1666666666666667
3 1.1222222222222222
4 1.140079365079365
5 1.131190476190476
1.13119048
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 23:50:22) 
-- CODE:
v = int(input("vezes de repeticao: "))

soma =3
i = 0
fim = v
while(i <= fim):
	soma = soma - ((4/(((i*1)+1)*((2*i)+1)*((i*2)+2)))*(-1)**i)
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
1 1.0
2 1.1666666666666667
3 1.1222222222222222
4 1.140079365079365
5 1.131190476190476
6 1.136240981240981
1.13624098
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 23:51:03) 
-- CODE:
v = int(input("vezes de repeticao: "))

soma =3
i = 0
fim = v
while(i <= fim):
	soma = soma - ((4/(((i*1)+1)*((2*i)+1)*((i*2)+2)))*(-1)**i)
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
1 1.0
2 1.1666666666666667
3 1.1222222222222222
4 1.140079365079365
5 1.131190476190476
6 1.136240981240981
1.13624098
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 23:51:37) 
-- CODE:
v = int(input("vezes de repeticao: "))

soma =3
i = 0
fim = v -1
while(i <= fim):
	soma = soma - ((4/(((i*1)+1)*((2*i)+1)*((i*2)+2)))*(-1)**i)
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
1 1.0
2 1.1666666666666667
3 1.1222222222222222
4 1.140079365079365
5 1.131190476190476
1.13119048
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 00:01:05) 
-- CODE:
v = int(input("vezes de repeticao: "))

soma =3
i = 1
fim = v -1
while(i <= fim):
	soma = soma - ((4/((i*2)*((2*i)+1)*((i*2)+2)))*(-1)**i)
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
2 3.1666666666666665
3 3.1333333333333333
4 3.145238095238095
5 3.1396825396825396
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 00:01:51) 
-- CODE:
v = int(input("vezes de repeticao: "))

soma =3
i = 0
fim = v -1
while(i <= fim):
	soma = soma - ((4/((i*2)*((2*i)+1)*((i*2)+2)))*(-1)**i)
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    soma = soma - ((4/((i*2)*((2*i)+1)*((i*2)+2)))*(-1)**i)
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 00:02:34) 
-- CODE:
v = int(input("vezes de repeticao: "))

soma =3
i = 1
fim = v -1
while(i <= fim):
	soma = soma - ((4/((i*2)*((2*i)+1)*((i*2)+2)))*(-1)**i)
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
2 3.1666666666666665
3 3.1333333333333333
4 3.145238095238095
5 3.1396825396825396
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-10 00:02:48) 
-- CODE:
v = int(input("vezes de repeticao: "))

soma =3
i = 1
fim = v -1
while(i <= fim):
	soma = soma - ((4/((i*2)*((2*i)+1)*((i*2)+2)))*(-1)**i)
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- EXECUTION TIME:
0.122306
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
2 3.1666666666666665
3 3.1333333333333333
4 3.145238095238095
5 3.1396825396825396
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
2 3.1666666666666665
3 3.1333333333333333
4 3.145238095238095
5 3.1396825396825396
6 3.1427128427128426
7 3.1408813408813407
8 3.142071817071817
9 3.1412548236077646
10 3.141839618929402
11 3.1414067184965018
12 3.1417360992606653
13 3.141479689004255
14 3.1416831892077552
15 3.1415189855952756
16 3.141653394197426
17 3.1415419859977827
18 3.1416353566793886
19 3.1415563302845726
20 3.1416238066678384
21 3.141565734658547
22 3.1416160719181865
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
2 3.1666666666666665
3 3.1333333333333333
4 3.145238095238095
5 3.1396825396825396
6 3.1427128427128426
7 3.1408813408813407
8 3.142071817071817
9 3.1412548236077646
10 3.141839618929402
11 3.1414067184965018
12 3.1417360992606653
13 3.141479689004255
14 3.1416831892077552
15 3.1415189855952756
16 3.141653394197426
17 3.1415419859977827
18 3.1416353566793886
19 3.1415563302845726
3.14155633
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 08:53:59) 
-- CODE:
v = int(input("vezes de repeticao: "))

soma =3
i = 0
fim = v -1
while(i < fim):
	soma = soma - ((4/((i*2)*((2*i)+1)*((i*2)+2)))*(-1)**i)
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    soma = soma - ((4/((i*2)*((2*i)+1)*((i*2)+2)))*(-1)**i)
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 08:54:16) 
-- CODE:
v = int(input("vezes de repeticao: "))

soma =3
i = 0
fim = v -1
while(i < fim):
	soma = soma - ((4/((i*2)*((2*i)+1)*((i*2)+2)))*(-1)**i)
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    soma = soma - ((4/((i*2)*((2*i)+1)*((i*2)+2)))*(-1)**i)
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 08:55:23) 
-- CODE:
v = int(input("vezes de repeticao: "))

soma = 0
i = 0
fim = v -1
while(i < fim):
	soma = 3 - ((4/((i*2)*((2*i)+1)*((i*2)+2)))*(-1)**i)
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    soma = 3 - ((4/((i*2)*((2*i)+1)*((i*2)+2)))*(-1)**i)
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 08:55:32) 
-- CODE:
v = int(input("vezes de repeticao: "))

soma = 0
i = 0
fim = v -1
while(i < fim):
	soma = 3 - ((4/((i*2)*((2*i)+1)*((i*2)+2)))*(-1)**i)
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    soma = 3 - ((4/((i*2)*((2*i)+1)*((i*2)+2)))*(-1)**i)
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 08:56:45) 
-- CODE:
from math import*
v = int(input("vezes de repeticao: "))

soma = 0
i = 0
fim = v -1
while(i < fim):
	soma = 3 - ((4/factorial((2*i)*((2*i)+1)*((i*2)+2)))*(-1)**i)
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
1 -1.0
2 3.0
3 3.0
4 3.0
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 08:58:27) 
-- CODE:
from math import*
v = int(input("vezes de repeticao: "))

soma = 3
i = 0
fim = v -1
while(i < fim):
	soma = soma - ((4/factorial((2*i)*((2*i)+1)*((i*2)+2)))*(-1)**i)
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
1 -1.0
2 -1.0
3 -1.0
4 -1.0
-1.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 08:58:32) 
-- CODE:
from math import*
v = int(input("vezes de repeticao: "))

soma = 3
i = 0
fim = v -1
while(i < fim):
	soma = soma - ((4/factorial((2*i)*((2*i)+1)*((i*2)+2)))*(-1)**i)
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
1 -1.0
2 -1.0
3 -1.0
4 -1.0
-1.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 08:59:32) 
-- CODE:
from math import*
v = int(input("vezes de repeticao: "))

soma = 3
i = 0
fim = v -1
while(i < fim):
	soma = soma + ((4/factorial((2*i)*((2*i)+1)*((i*2)+2)))*(1)**-i)
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
1 7.0
2 7.0
3 7.0
4 7.0
7.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 08:59:38) 
-- CODE:
from math import*
v = int(input("vezes de repeticao: "))

soma = 3
i = 0
fim = v -1
while(i < fim):
	soma = soma + ((4/factorial((2*i)*((2*i)+1)*((i*2)+2)))*(1)**-i)
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
1 7.0
2 7.0
3 7.0
4 7.0
7.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 08:59:52) 
-- CODE:
from math import*
v = int(input("vezes de repeticao: "))

soma = 0
i = 0
fim = v -1
while(i < fim):
	soma = soma + ((4/factorial((2*i)*((2*i)+1)*((i*2)+2)))*(1)**-i)
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
1 4.0
2 4.0
3 4.0
4 4.0
4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 09:00:02) 
-- CODE:
from math import*
v = int(input("vezes de repeticao: "))

soma = 0
i = 0
fim = v -1
while(i < fim):
	soma = 3 + ((4/factorial((2*i)*((2*i)+1)*((i*2)+2)))*(1)**-i)
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
1 7.0
2 3.0
3 3.0
4 3.0
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 09:00:16) 
-- CODE:
from math import*
v = int(input("vezes de repeticao: "))

soma = 0
i = 0
fim = v -1
while(i < fim):
	soma = 3 + ((4/factorial((2*i)*((2*i)+1)*((i*2)+2)))*(1)**-i)
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
1 7.0
2 3.0
3 3.0
4 3.0
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 09:01:03) 
-- CODE:
from math import*
v = int(input("vezes de repeticao: "))

soma = 0
i = 0
fim = v -1
while(i < fim):
	soma = soma + ((4/factorial((2*i)*((2*i)+1)*((i*2)+2)))*(1)**-i)
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
1 4.0
2 4.0
3 4.0
4 4.0
4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 09:01:26) 
-- CODE:
from math import*
v = int(input("vezes de repeticao: "))

soma = 3
i = 0
fim = v -1
while(i < fim):
	soma = soma + ((4/factorial((2*i)*((2*i)+1)*((i*2)+2)))*(1)**-i)
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
1 7.0
2 7.0
3 7.0
4 7.0
7.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 09:03:19) 
-- CODE:
from math import*
v = int(input("vezes de repeticao: "))

soma = 3
i = 0
fim = v -1
while(i < fim):
	soma = soma + ((4/factorial((2*i)*((2*i)+1)*((i*2)+2)))*(1**-i))
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
1 7.0
2 7.0
3 7.0
4 7.0
7.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 09:04:39) 
-- CODE:
from math import*
v = int(input("vezes de repeticao: "))

soma = 3
i = 0
fim = v -1
while(i < fim):
	soma = soma + ((4/factorial((2*i)+((2*i)+1)+((i*2)+2)))+(1**-i))
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
1 4.666666666666666
2 5.666677689594356
3 6.666677689597415
4 7.666677689597415
7.66667769
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 09:05:18) 
-- CODE:
from math import*
v = int(input("vezes de repeticao: "))

soma = 0
i = 0
fim = v -1
while(i < fim):
	soma = soma + ((4/factorial((2*i)+((2*i)+1)+((i*2)+2)))+(1**-i))
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
1 1.6666666666666665
2 2.666677689594356
3 3.6666776895974147
4 4.666677689597415
4.66667769
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 09:05:59) 
-- CODE:
from math import*
v = int(input("vezes de repeticao: "))

soma = 0
i = 0
fim = v -1
while(i < fim):
	soma = 3 + ((4/factorial((2*i)+((2*i)+1)+((i*2)+2)))+(1**-i))
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
1 4.666666666666666
2 4.00001102292769
3 4.000000000003059
4 4.0
4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 09:12:56) 
-- CODE:
from math import*
v = int(input("vezes de repeticao: "))

soma = 0
i = 0
fim = v -1
while(i < fim):
	soma = soma + ((4/factorial((2*i)+((2*i)+1)+((2*i)+2)*(1**-i))
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- ERROR:
File "XXXX", line 9
    i = i + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 09:15:44) 
-- CODE:
from math import*
v = int(input("vezes de repeticao: "))

soma = 0
i = 0
fim = v -1
while(i < fim):
	soma = soma + ((4/(factorial((2*i)+((2*i)+1)+((2*i)+2))))*(1**-i))
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
1 0.6666666666666666
2 0.6666776895943562
3 0.6666776895974151
4 0.6666776895974151
0.66667769
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 09:16:09) 
-- CODE:
from math import*
v = int(input("vezes de repeticao: "))

soma = 3
i = 0
fim = v -1
while(i < fim):
	soma = soma + ((4/(factorial((2*i)+((2*i)+1)+((2*i)+2))))*(1**-i))
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
1 3.6666666666666665
2 3.6666776895943562
3 3.666677689597415
4 3.666677689597415
3.66667769
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 09:17:50) 
-- CODE:
from math import*
v = int(input("vezes de repeticao: "))

soma = 0
i = 0
fim = v -1
while(i < fim):
	soma = 3 + ((4/(factorial((2*i)+((2*i)+1)+((2*i)+2))))*(1**-i))
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
1 3.6666666666666665
2 3.0000110229276897
3 3.000000000003059
4 3.0
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 09:17:58) 
-- CODE:
from math import*
v = int(input("vezes de repeticao: "))

soma = 0
i = 0
fim = v
while(i < fim):
	soma = 3 + ((4/(factorial((2*i)+((2*i)+1)+((2*i)+2))))*(1**-i))
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
1 3.6666666666666665
2 3.0000110229276897
3 3.000000000003059
4 3.0
5 3.0
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 09:18:33) 
-- CODE:
from math import*
v = int(input("vezes de repeticao: "))

soma = 3
i = 0
fim = v
while(i < fim):
	soma = soma + ((4/(factorial((2*i)+((2*i)+1)+((2*i)+2))))*(1**-i))
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
1 3.6666666666666665
2 3.6666776895943562
3 3.666677689597415
4 3.666677689597415
5 3.666677689597415
3.66667769
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 09:19:56) 
-- CODE:
from math import*
v = int(input("vezes de repeticao: "))

soma = 0
i = 0
fim = v
while(i < fim):
	soma = 3 + ((4/(factorial((2*i)+((2*i)+1)+((2*i)+2))))*(1**-i))
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
1 3.6666666666666665
2 3.0000110229276897
3 3.000000000003059
4 3.0
5 3.0
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 09:21:22) 
-- CODE:
from math import*
v = int(input("vezes de repeticao: "))


i = 0
fim = v
while(i < fim):
	soma = 3 + ((4/(factorial((2*i)+((2*i)+1)+((2*i)+2))))*(1**-i))
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
1 3.6666666666666665
2 3.0000110229276897
3 3.000000000003059
4 3.0
5 3.0
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 09:21:58) 
-- CODE:
from math import*
v = int(input("vezes de repeticao: "))

soma = 0
i = 0
fim = v
while(i < fim):
	soma = soma + 3 + ((4/(factorial((2*i)+((2*i)+1)+((2*i)+2))))*(1**-i))
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
1 3.6666666666666665
2 6.666677689594356
3 9.666677689597414
4 12.666677689597414
5 15.666677689597414
15.66667769
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 09:22:40) 
-- CODE:
from math import*
v = int(input("vezes de repeticao: "))

soma = 0
i = 0
fim = v
while(i < fim):
	soma = soma + ((4/(factorial((2*i)+((2*i)+1)+((2*i)+2))))*(1**-i))
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
1 0.6666666666666666
2 0.6666776895943562
3 0.6666776895974151
4 0.6666776895974151
5 0.6666776895974151
0.66667769
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 09:23:43) 
-- CODE:
from math import*
v = int(input("vezes de repeticao: "))

soma = 0
i = 0
fim = v
while(i < fim):
	soma = soma + ((4/(factorial((2*i)*((2*i)+1)*((2*i)+2))))*(1**-i))
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
1 4.0
2 4.0
3 4.0
4 4.0
5 4.0
4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 09:24:43) 
-- CODE:
from math import*
v = int(input("vezes de repeticao: "))

soma = 0
i = 0
fim = v
while(i < fim):
	soma = soma + ((4/(factorial(2*i)*factorial((2*i)+1)*factorial((2*i)+2)))*(1**-i))
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
1 2.0
2 2.013888888888889
3 2.0138908179012347
4 2.0138908179285733
5 2.0138908179285733
2.01389082
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 09:25:41) 
-- CODE:
from math import*
v = int(input("vezes de repeticao: "))

soma = 0
i = 0
fim = v
while(i < fim):
	soma = soma + ((4/(2*i)*((2*i)+1)*((2*i)+2))*(1**-i))
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    soma = soma + ((4/(2*i)*((2*i)+1)*((2*i)+2))*(1**-i))
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 09:27:35) 
-- CODE:
from math import*
v = int(input("vezes de repeticao: "))

soma = 0
i = 0
fim = v
while(i < fim):
	soma = soma + ((4/(2*factorial(i)*((2*factorial(i)+1)*((2*factorial(i)+2))*(1**-i))
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- ERROR:
File "XXXX", line 9
    i = i + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 09:28:00) 
-- CODE:
from math import*
v = int(input("vezes de repeticao: "))

soma = 0
i = 0
fim = v
while(i < fim):
	soma = soma + ((4/(2*factorial(i))*((2*factorial(i)+1)*((2*factorial(i)+2))*(1**-i))
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- ERROR:
File "XXXX", line 9
    i = i + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 09:28:47) 
-- CODE:
from math import*
v = int(input("vezes de repeticao: "))

soma = 0
i = 0
fim = v
while(i < fim):
	soma = soma + ((4/((2*factorial(i))*((2*factorial(i))+1)*((2*factorial(i))+2))*(1**-i))
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- ERROR:
File "XXXX", line 9
    i = i + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 09:29:05) 
-- CODE:
from math import*
v = int(input("vezes de repeticao: "))

soma = 0
i = 0
fim = v
while(i < fim):
	soma = soma + ((4/((2*factorial(i))*((2*factorial(i))+1)*((2*factorial(i))+2)))*(1**-i))
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
1 0.16666666666666666
2 0.3333333333333333
3 0.36666666666666664
4 0.36849816849816847
5 0.36853218210361066
0.36853218
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 09:29:20) 
-- CODE:
from math import*
v = int(input("vezes de repeticao: "))

soma = 3
i = 0
fim = v
while(i < fim):
	soma = soma + ((4/((2*factorial(i))*((2*factorial(i))+1)*((2*factorial(i))+2)))*(1**-i))
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
1 3.1666666666666665
2 3.333333333333333
3 3.3666666666666663
4 3.368498168498168
5 3.36853218210361
3.36853218
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 09:29:40) 
-- CODE:
from math import*
v = int(input("vezes de repeticao: "))

soma = 3
i = 0
fim = v - 1
while(i < fim):
	soma = soma + ((4/((2*factorial(i))*((2*factorial(i))+1)*((2*factorial(i))+2)))*(1**-i))
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
1 3.1666666666666665
2 3.333333333333333
3 3.3666666666666663
4 3.368498168498168
3.36849817
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 09:30:14) 
-- CODE:
from math import*
v = int(input("vezes de repeticao: "))

soma = 3
i = 0
fim = v - 1
while(i < fim):
	soma = soma + ((4/((2*factorial(i))+((2*factorial(i))+1)+((2*factorial(i))+2)))*(1**-i))
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
1 3.4444444444444446
2 3.8888888888888893
3 4.155555555555556
4 4.258119658119658
4.25811966
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 09:55:37) 
-- CODE:
from math import*
v = int(input("vezes de repeticao: "))

soma = 3
i = 0
fim = v - 1
while(i < fim):
	soma = soma + ((4/((2*factorial(i))*((2*factorial(i))+1)+((2*factorial(i))+2)))*((-1)**i))
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
1 3.4
2 3.0
3 3.1538461538461537
4 3.130316742081448
3.13031674
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 09:56:43) 
-- CODE:
from math import*
v = int(input("vezes de repeticao: "))

soma = 0
i = 0
fim = v - 1
while(i < fim):
	soma = soma + ((4/((2*factorial(i))*((2*factorial(i))+1)+((2*factorial(i))+2)))*((-1)**i))
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
1 0.4
2 0.0
3 0.15384615384615385
4 0.13031674208144797
0.13031674
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 09:57:39) 
-- CODE:
from math import*
v = int(input("vezes de repeticao: "))

soma = 0
i = 0
fim = v - 1
while(i < fim):
	soma = soma + ((4/((2*i)*((2*i)+1)+((2*i)+2)))*((-1)**i))
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
1 2.0
2 1.6
3 1.7538461538461538
4 1.6738461538461538
1.67384615
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 09:57:56) 
-- CODE:
from math import*
v = int(input("vezes de repeticao: "))

soma = 0
i = 0
fim = v - 1
while(i <= fim):
	soma = soma + ((4/((2*i)*((2*i)+1)+((2*i)+2)))*((-1)**i))
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
1 2.0
2 1.6
3 1.7538461538461538
4 1.6738461538461538
5 1.7226266416510319
1.72262664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 10:03:08) 
-- CODE:
from math import*
v = int(input("vezes de repeticao: "))

soma = 0
i = 0
fim = v - 1
while(i <= fim):
	soma = 3 + 4*soma(((-1)**i/((2*i+2)*((2*i)+3)+((2*i)+4)))
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- ERROR:
File "XXXX", line 9
    i = i + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 10:03:24) 
-- CODE:
from math import*
v = int(input("vezes de repeticao: "))

soma = 0
i = 0
fim = v - 1
while(i <= fim):
	soma = 3 + 4*soma(((-1)**i/((2*i+2)*((2*i)+3)+((2*i)+4))))
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    soma = 3 + 4*soma(((-1)**i/((2*i+2)*((2*i)+3)+((2*i)+4))))
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 10:03:55) 
-- CODE:
from math import*
v = int(input("vezes de repeticao: "))

soma = 0
i = 0
fim = v - 1
while(i <= fim):
	soma = 3 + 4*soma*(((-1)**i/((2*i+2)*((2*i)+3)+((2*i)+4))))
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
1 3.0
2 2.5384615384615383
3 3.203076923076923
4 2.84375234521576
5 3.0932377818103527
3.09323778
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 10:04:31) 
-- CODE:
from math import*
v = int(input("vezes de repeticao: "))

soma = 0
i = 0
fim = v - 1
while(i <= fim):
	soma = 3 + 4*soma*(((-1)**i/((2*i)*((2*i)+1)+((2*i)+2))))
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
1 3.0
2 1.7999999999999998
3 3.276923076923077
4 2.737846153846154
5 3.1335534709193245
3.13355347
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 10:04:56) 
-- CODE:
from math import*
v = int(input("vezes de repeticao: "))

soma = 0
i = 0
fim = v - 1
while(i <= fim):
	soma = 3 + 4*soma+(((-1)**i/((2*i)*((2*i)+1)+((2*i)+2))))
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
1 3.5
2 16.9
3 70.63846153846153
4 285.5338461538461
5 1145.1475797373357
1145.14757974
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 10:05:11) 
-- CODE:
from math import*
v = int(input("vezes de repeticao: "))

soma = 0
i = 0
fim = v - 1
while(i <= fim):
	soma = 3 + 4*soma*(((-1)**i/((2*i)*((2*i)+1)+((2*i)+2))))
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
1 3.0
2 1.7999999999999998
3 3.276923076923077
4 2.737846153846154
5 3.1335534709193245
3.13355347
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:10:01) 
-- CODE:
from math import*
v = int(input("vezes de repeticao: "))

soma = 3
i = 0
fim = v - 1
while(i <= fim):
	soma += 4*soma*((-1)**i/((2*i)*((2*i)+1)*((2*i)+2)))
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    soma += 4*soma*((-1)**i/((2*i)*((2*i)+1)*((2*i)+2)))
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:10:30) 
-- CODE:
from math import*
v = int(input("vezes de repeticao: "))

soma = 3
i = 1
fim = v
while(i <= fim):
	soma += 4*soma*((-1)**i/((2*i)*((2*i)+1)*((2*i)+2)))
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
2 2.5
3 2.5833333333333335
4 2.552579365079365
5 2.5667603615520282
6 2.5589822998503555
2.5589823
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:11:01) 
-- CODE:
from math import*
v = int(input("vezes de repeticao: "))

soma = 3
i = 1
fim = v
while(i <= fim):
	soma += 4*soma*((-1)**i/((2*i)*((2*i)+1)*((2*i)+2)))
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
2 2.5
3 2.5833333333333335
4 2.552579365079365
5 2.5667603615520282
6 2.5589822998503555
2.5589823
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:11:59) 
-- CODE:
from math import*
v = int(input("vezes de repeticao: "))

soma = 3
i = 1
fim = v
while(i <= fim):
	soma += 4*((-1)**i/((2*i)*((2*i)+1)*((2*i)+2)))
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
2 2.8333333333333335
3 2.8666666666666667
4 2.854761904761905
5 2.8603174603174604
6 2.8572871572871574
2.85728716
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:13:10) 
-- CODE:
from math import*
v = int(input("vezes de repeticao: "))

soma = 3
i = 1
fim = v
while(i <= fim):
	soma += 4*((-1)**i-1/((2*i)*((2*i)+1)*((2*i)+2)))
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
2 -1.166666666666667
3 2.8
4 -1.211904761904762
5 2.7825396825396824
6 -1.2204906204906205
-1.22049062
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:13:54) 
-- CODE:
from math import*
v = int(input("vezes de repeticao: "))

soma = 3
i = 1
fim = v
while(i <= fim):
	soma += 4*soma*(((-1)**i-1)/((2*i)*((2*i)+1)*((2*i)+2)))
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
2 2.0
3 2.0
4 1.9523809523809523
5 1.9523809523809523
6 1.9405483405483406
1.94054834
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:14:04) 
-- CODE:
from math import*
v = int(input("vezes de repeticao: "))

soma = 3
i = 1
fim = v
while(i <= fim):
	soma += 4*(((-1)**i-1)/((2*i)*((2*i)+1)*((2*i)+2)))
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
2 2.6666666666666665
3 2.6666666666666665
4 2.642857142857143
5 2.642857142857143
6 2.636796536796537
2.63679654
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:19:04) 
-- CODE:
from math import*
v = int(input("vezes de repeticao: "))

soma = 3
i = 0
fim = v-1
while(i <= fim):
	soma += 4*(((-1)**i)/((2*i+1)*((2*i)+2)*((2*i)+3)))
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
1 3.6666666666666665
2 3.5999999999999996
3 3.6190476190476186
4 3.6111111111111107
5 3.615151515151515
3.61515152
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:19:25) 
-- CODE:
from math import*
v = int(input("vezes de repeticao: "))

soma = 3
i = 0
fim = v-1
while(i <= fim):
	soma += 4*(((-1)**i)/((2*i+2)*((2*i)+3)*((2*i)+4)))
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
1 3.1666666666666665
2 3.1333333333333333
3 3.145238095238095
4 3.1396825396825396
5 3.1427128427128426
3.14271284
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:19:48) 
-- CODE:
from math import*
v = int(input("vezes de repeticao: "))

soma = 3
i = 0
fim = v-1
while(i <= fim):
	soma += 4*(((-1)**i)/((2*i+2)*((2*i)+3)*((2*i)+4)))
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
1 3.1666666666666665
2 3.1333333333333333
3 3.145238095238095
4 3.1396825396825396
5 3.1427128427128426
3.14271284
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:20:19) 
-- CODE:
from math import*
v = int(input("vezes de repeticao: "))

soma = 3
i = 0
fim = v-1
while(i < fim):
	soma += 4*(((-1)**i)/((2*i+2)*((2*i)+3)*((2*i)+4)))
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
1 3.1666666666666665
2 3.1333333333333333
3 3.145238095238095
4 3.1396825396825396
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 13:20:27) 
-- CODE:
from math import*
v = int(input("vezes de repeticao: "))

soma = 3
i = 0
fim = v-1
while(i < fim):
	soma += 4*(((-1)**i)/((2*i+2)*((2*i)+3)*((2*i)+4)))
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- EXECUTION TIME:
0.122666
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
1 3.1666666666666665
2 3.1333333333333333
3 3.145238095238095
4 3.1396825396825396
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
1 3.1666666666666665
2 3.1333333333333333
3 3.145238095238095
4 3.1396825396825396
5 3.1427128427128426
6 3.1408813408813407
7 3.142071817071817
8 3.1412548236077646
9 3.141839618929402
10 3.1414067184965018
11 3.1417360992606653
12 3.141479689004255
13 3.1416831892077552
14 3.1415189855952756
15 3.141653394197426
16 3.1415419859977827
17 3.1416353566793886
18 3.1415563302845726
19 3.1416238066678384
20 3.141565734658547
21 3.1416160719181865
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
1 3.1666666666666665
2 3.1333333333333333
3 3.145238095238095
4 3.1396825396825396
5 3.1427128427128426
6 3.1408813408813407
7 3.142071817071817
8 3.1412548236077646
9 3.141839618929402
10 3.1414067184965018
11 3.1417360992606653
12 3.141479689004255
13 3.1416831892077552
14 3.1415189855952756
15 3.141653394197426
16 3.1415419859977827
17 3.1416353566793886
18 3.1415563302845726
3.14155633
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 13:20:34) 
-- CODE:
from math import*
v = int(input("vezes de repeticao: "))

soma = 3
i = 0
fim = v-1
while(i < fim):
	soma += 4*(((-1)**i)/((2*i+2)*((2*i)+3)*((2*i)+4)))
	i = i + 1
	print(i,soma)

print(round(soma,8))
-- OUTPUT:
1 3.1666666666666665
2 3.1333333333333333
3 3.145238095238095
4 3.1396825396825396
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 13:20:43) 
-- CODE:
from math import*
v = int(input("vezes de repeticao: "))

soma = 3
i = 0
fim = v-1
while(i < fim):
	soma += 4*(((-1)**i)/((2*i+2)*((2*i)+3)*((2*i)+4)))
	i = i + 1

print(round(soma,8))
-- EXECUTION TIME:
0.19976
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.14155633
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 14:34:49) 
-- CODE:
from math import*
v = int(input("vezes de repeticao: "))

soma = 3
i = 0
fim = v-1
while(i < fim):
	soma += 4*(((-1)**i)/((2*i+2)*((2*i)+3)*((2*i)+4)))
	i = i + 1

print(round(soma,8))
-- EXECUTION TIME:
0.189677
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.14155633
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
